--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "razorpay": "^2.0.6"
   }
 }
