--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Aditya Malik",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
